Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/ExtendsScope.out
ExtendsScope.java:15:30: compiler.err.cant.resolve: kindname.class, I, , 
1 error
